--- a/package.json
+++ b/package.json
@@ -1,22 +1,75 @@
 {
+
+
   "name": "server",
+
+
   "version": "1.0.0",
+
+
   "description": "",
-  "main": "main.js",
+
+
+  "main": "app.js",
+
+
   "scripts": {
-    "test": "\"echo\""
+
+
+    "test": "\"echo\"",
+
+    "watch": "nodemon ./app.js"
+
+
+
   },
+
+
   "repository": {
+
+
     "type": "git",
+
+
     "url": "git+https://github.com/2000qwer/TWwAI_L2.git"
+
+
   },
+
+
   "author": "Michal",
+
+
   "license": "ISC",
+
+
   "dependencies": {
+
+
+    "ejs": "^3.1.8",
+
+
     "express": "4.18.2"
+
+
+
   },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+
   "bugs": {
+
+
     "url": "https://github.com/2000qwer/TWwAI_L2/issues"
+
+
   },
+
+
   "homepage": "https://github.com/2000qwer/TWwAI_L2#readme"
+
+
 }
+
+
